compiler/test-data/parser/arena/errors/missing_scheme.frel
module arena.errors.missing_scheme

arena UserArena {
    for
}
